# internal/handlers/services/auth.go
@@ -1,7 +1,10 @@
 package services
 
-import "github.com/maksimfisenko/moxer/internal/services/dto"
+import (
+	"github.com/maksimfisenko/moxer/internal/services/dto"
+)
 
 type AuthService interface {
 	Register(userDTO *dto.UserDTO) (*dto.UserDTO, error)
+	Login(credentials *dto.UserCredentials) (*dto.Token, error)
 }
