# internal/services/dto/auth.go
@@ -13,3 +13,12 @@ type UserDTO struct {
 	CreatedAt time.Time
 	UpdatedAt time.Time
 }
+
+type UserCredentials struct {
+	Email    string
+	Password string
+}
+
+type Token struct {
+	Token string
+}
